PROJECT: fix toggle bg lack of contrast

--- a/src/sass/ProjectComponent/main.scss
+++ b/src/sass/ProjectComponent/main.scss
@@ -238,6 +238,7 @@
 
         &-toggle {
             display: none;
+            background-color: rgba(0,0,0, .25);
             box-shadow: -2px 0px 3px 0 rgba(255, 255, 255, 0.2), 1px 2px 3px 0 rgba(0, 0, 0, 0.4);
             box-sizing: border-box;
             position: absolute;
